--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "token": "ODM3NzczNDMyMjY3NjA0MDI4.G28rJ3.VctnTkHvKHAsY_Ma3zFwH3rJLSNni3gPZOemQk",
+    "token": "your token here",
     "prefix": "!",
     "language": "en",
     "nsfw": "off",
