--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "token": "your token here",
-    "prefix": "!",
+    "token": "NjE5OTUxNDgwMDgxODc1MDA1.GdQ3KR.JdiarZ3f8f_0_Sh-IuwjuFmC6K8YcxVg9RiFDM",
+    "prefix": ".",
     "language": "en",
     "nsfw": "on",
     "version": "4.9.0",
